<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Cyan"
    tools:context="com.example.ricky52194.stockquotes_ramos.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/eight"
        android:layout_marginTop="@dimen/eight"
        android:text="@string/Title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049" />

    <EditText
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/eight"
        android:layout_marginTop="@dimen/eight"
        android:hint="@string/Hint"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.169" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/eight"
        android:layout_marginTop="@dimen/eight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.645">

        <TableRow android:gravity="center">

            <TextView
                android:id="@+id/symbolText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Symbol"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/symbolDisplay"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/Black"
                android:textColor="@color/lime" />
        </TableRow>

        <TableRow android:gravity="center">

            <TextView
                android:id="@+id/nameText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nameDisplay"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/Black"
                android:textColor="@color/lime" />
        </TableRow>

        <TableRow android:gravity="center">

            <TextView
                android:id="@+id/lastPriceText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/LastPrice"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lastPriceDisplay"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/Black"
                android:textColor="@color/lime" />
        </TableRow>

        <TableRow android:gravity="center">

            <TextView
                android:id="@+id/lastTimeText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/LastTradeTime"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lastTimeDisplay"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/Black"
                android:textColor="@color/lime" />
        </TableRow>

        <TableRow android:gravity="center">

            <TextView
                android:id="@+id/changeText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Change"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/changeDisplay"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/Black"
                android:textColor="@color/lime" />
        </TableRow>

        <TableRow android:gravity="center">

            <TextView
                android:id="@+id/rangeText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Range"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/rangeDisplay"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/Black"
                android:textColor="@color/lime" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="@dimen/sixty"
        android:layout_height="@dimen/sixty"
        android:layout_marginBottom="@dimen/eight"
        android:layout_marginEnd="@dimen/eight"
        android:layout_marginStart="@dimen/eight"
        android:layout_marginTop="@dimen/eight"
        android:background="@drawable/go_button"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/GO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.295"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.321" />

    <Button
        android:id="@+id/button2"
        android:layout_width="@dimen/sixty"
        android:layout_height="@dimen/sixty"
        android:layout_marginBottom="@dimen/eight"
        android:layout_marginEnd="@dimen/eight"
        android:layout_marginStart="@dimen/eight"
        android:layout_marginTop="@dimen/eight"
        android:background="@drawable/reset_button"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/RESET"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.704"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.321" />

</android.support.constraint.ConstraintLayout>
